# stingray

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.vision  LICENSE  README.md  YOLOv8-Jetson.py  build.sh  build_docker.sh  cbc  cbv  dbc  dc  dqr  dv  gazebo_test_module.py  run.sh  run_docker_vision.sh  run_image_view.sh  run_vision.sh
src/communication/stingray_communication/: CMakeLists.txt  nodelets_init.xml  package.xml
src/communication/stingray_communication/include/: TopicsAndServices.h  gui_bridge.h  hardware_bridge.h  hardware_bridge_nodelet.h  uart_driver.h  uart_driver_nodelet.h  udp_bridge.h  udp_receiver.h  udp_sender.h
src/communication/stingray_communication/src/: gazebo_bridge.cpp  gui_bridge.cpp  hardware_bridge.cpp  hardware_bridge_nodelet.cpp  uart_driver.cpp  uart_driver_nodelet.cpp  udp_bridge.cpp  udp_receiver.cpp  udp_sender.cpp
src/communication/stingray_communication_msgs/: CMakeLists.txt  package.xml
src/communication/stingray_communication_msgs/msg/: HardwareInfo.msg
src/communication/stingray_communication_msgs/srv/: SetHorizontalMove.srv  SetInt32.srv  SetStabilization.srv
src/communication/stingray_gazebo_communication/: CMakeLists.txt  package.xml
src/communication/stingray_gazebo_communication/include/: gazebo_bridge.h
src/communication/stingray_gazebo_communication/src/: gazebo_bridge.cpp
src/control/stingray_communication/: CMakeLists.txt  package.xml
src/control/stingray_communication/include/: hardware_bridge.h  topics_and_services.h  uart_bridge.h
src/control/stingray_communication/src/: hardware_bridge.cpp  uart_bridge.cpp
src/control/stingray_movement/: CMakeLists.txt  package.xml
src/control/stingray_movement/src/: basic_movement.cpp
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/include/: add_two_ints_server.h
src/cpp_srvcli/src/: add_two_ints_server.cpp
src/devices/stingray_devices/: CMakeLists.txt  package.xml
src/devices/stingray_devices/src/: .UpDownServer.cpp.swp  Devices.cpp  UpDownServer.cpp
src/missions/stingray_tfsm/: CMakeLists.txt  package.xml  setup.py
src/missions/stingray_tfsm/scripts/: bypassing_test.bash  gate.py  gate_bruteforce.py  gate_vision.py
src/stingray_depth_vision/: CMakeLists.txt  README.md  package.xml
src/stingray_depth_vision/include/: depthcam.h
src/stingray_depth_vision/src/: depthcam.cpp  distance_measure.cpp
src/stingray_devices/: CMakeLists.txt  package.xml
src/stingray_devices/devices/: CMakeLists.txt  package.xml
src/stingray_devices/devices/include/: UpDownServer.h
src/stingray_devices/devices/src/: UpDownServer.cpp
src/stingray_devices/devices_msgs/: CMakeLists.txt  package.xml
src/stingray_devices/include/: DeviceActionServer.h  EnableDeviceNode.h  OpenCloseActionServer.h  UpDownServer.h
src/stingray_devices/src/: DeviceActionServer.cpp  Devices.cpp  EnableDeviceNode.cpp  OpenCloseActionServer.cpp
src/stingray_devices_msgs/: CMakeLists.txt  package.xml
src/stingray_drivers/: CMakeLists.txt  nodelets_init.xml  package.xml
src/stingray_drivers/include/: TopicsAndServices.h  hardware_bridge_nodelet.h  protocolConstants.h  uart_driver_nodelet.h
src/stingray_drivers/include/messages/: messages.h
src/stingray_drivers/src/: gazebo_bridge.cpp  hardware_bridge.cpp  hardware_bridge_nodelet.cpp  uart_driver.cpp  uart_driver_nodelet.cpp
src/stingray_emergency/: CMakeLists.txt  package.xml
src/stingray_fsm/: CMakeLists.txt  package.xml
src/stingray_fsm/scripts/: control_fsm_node.py
src/stingray_interfaces/: CMakeLists.txt  package.xml
src/stingray_interfaces/action/: BboxCenteringTwistAction.action  BboxPathTwistAction.action  BboxSearchTwistAction.action  DeviceAction.action  HydroacousticCenteringTwistAction.action  MoveCenteringAction.action  OpenCloseAction.action  TwistAction.action  UpDownAction.action
src/stingray_interfaces/msg/: Bbox.msg  BboxArray.msg  EnableObjectDetection.msg  ObjectsArray.msg
src/stingray_interfaces/srv/: SetEnableObjectDetection.srv  SetTransition.srv  SetTwist.srv
src/stingray_missions/: package.xml  setup.cfg  setup.py
src/stingray_missions/stingray_missions/: action.py  core.py  event.py  fsm.py  fsm_node.py  missions_node.py  qr_launcher.py  qr_trigger_node.py  robot.py  utils.py
src/stingray_missions_lib/: CMakeLists.txt  package.xml  setup.py
src/stingray_movement/: CMakeLists.txt  package.xml
src/stingray_movement/include/: AbstractActionServer.h  AbstractMovementActionServer.h  AsyncTimer.h  BboxCenteringTwistActionServer.h  DiveServer.h  EnableStabilizationActionServer.h  LinearMovementServer.h  MoveCenteringActionServer.h  RotateServer.h  TwistActionServer.h
src/stingray_movement/src/: BboxCenteringTwistActionServer.cpp  BboxSearchTwistActionServer.cpp  DiveServer.cpp  EnableStabilizationActionServer.cpp  HydroacousticCenteringTwistActionServer.cpp  LinearMovementServer.cpp  MoveCenteringActionServer.cpp  RotateServer.cpp  TwistActionServer.cpp  basic_movement.cpp  movement_patterns.cpp
src/stingray_object_detection/: package.xml  setup.cfg  setup.py
src/stingray_object_detection/stingray_object_detection/: ImageHandler.py  distance.py  log.txt  tracker.py  utils.py  video_recorder.py  yolo_detector_base.py  yolov5_detector.py  yolov8_detect.py  yolov8_detector.py
src/stingray_object_detection/weights/: config.yaml  yolov5.yaml
src/stingray_startup/: package.xml  setup.cfg  setup.py
src/stingray_startup/launch/: camera.launch.xml  main.launch.py  uart_udp.launch.py
src/stingray_steering/: CMakeLists.txt  package.xml
src/stingray_steering/include/: Steerer.h
src/stingray_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py  video_recorder.py
src/stingray_utils/launch/: stingray_utils.launch.py
src/stingray_utils/scripts/: video_recorder.py
src/stingray_utils/stingray_utils/: acyncio.py  config.py  resources.py  video_recorder.py
src/stingray_utils/video_recorder/: CMakeLists.txt  package.xml
src/stingray_vision_msgs/: package.xml
src/stingray_vision_msgs/msg/: ObjectsArray.msg
src/stingray_web_service/: CMakeLists.txt  package.xml
(+329 files in other folders)
