<package format="3">
  <name>stingray_devices_msgs</name>
  <version>0.1.0</version>

  <description>Package contains message definitions for Stingray devices API</description>
  <maintainer email="davtart2000@yandex.ru">Artyom Davtyan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>