<?xml version="1.0"?>
<package format="2">
  <name>stingray_drivers</name>
  <version>0.1.0</version>
  <description>Package contains drivers and bridges for communication between real vehicle or simulator and Stingray platform.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>serial</depend>
  <depend>stingray_common</depend>

</package>
