<?xml version="1.0"?>
<package format="2">
  <name>stingray_emergency</name>
  <version>0.1.0</version>
  <description>Package contains nodes for monitoring state of the vehicle and reporting it via topics and services.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
