<?xml version="1.0"?>
<package format="2">
  <name>stingray_fsm</name>
  <version>0.1.0</version>
  <description>Package contains main FSM node for vehicle control.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stingray_msgs</depend>
  <depend>stingray_missions_lib</depend>

</package>
