<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stingray_missions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vladik1209@gmail.com">vladushked</maintainer>
  <license>TODO: License declaration</license>

  <depend>stingray_core_interfaces</depend>
  <depend>stingray_interfaces</depend>
  <depend>stingray_utils</depend>
  <depend>zbar_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
