<?xml version="1.0"?>
<package format="2">
  <name>stingray_missions_lib</name>
  <version>0.1.0</version>
  <description>Package contains classes to implement missions that are states of control FSM.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
