<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>stingray_object_detection</name>
    <version>0.2.0</version>
    <description> The stingray_object_detection package This package contains: - scripts to handle
        with convolutional neural networks - ... Scripts: - yolo_detector.py Supported dnn
        frameworks and modules: - pytorch </description>
    <maintainer email="vladushked@yandex.ru">Vladislav Plotnikov</maintainer>
    <license>MIT</license>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    

    <exec_depend>rclpy</exec_depend>

    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>