<?xml version="1.0"?>
<package format="2">
  <name>stingray_steering</name>
  <version>0.1.0</version>
  <description>Package contains high-level classes for delivering control actions to the vehicle via Stingray platform.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
