<?xml version="1.0"?>
<package format="2">
  <name>stingray_vision_msgs</name>
  <version>0.1.0</version>
  <description>The stingray_vision_msgs package</description>

  <maintainer email="vladislav.a.plotnikov@yandex.ru">Vladislav Plotnikov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
