<?xml version="1.0"?>
<package format="2">
  <name>stingray_common</name>
  <version>0.1.0</version>
  <description>Package contains web service that allows to control Stingray platform via web interface or REST API.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
