<?xml version="1.0"?>
<package format="2">
  <name>stingray_communication</name>
  <version>0.1.0</version>
  <description>Package contains drivers and bridges for communication between real vehicle or simulator and Stingray platform.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>
  <maintainer email="vladushked@yandex.ru">Vladislav Plotnikov</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>serial</depend>
  <depend>stingray_communication_msgs</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>stingray_utils</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets_init.xml"/>
  </export>
</package>
