<?xml version="1.0"?>
<package format="2">
  <name>stingray_gazebo_communication</name>
  <version>0.1.0</version>
  <description>Package contains gazebo bridge for communication between simulator and Stingray platform.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>
  <maintainer email="vladushked@yandex.ru">Vladislav Plotnikov</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>stingray_communication_msgs</depend>
  <depend>stingray_utils</depend>

</package>
