<?xml version="1.0"?>
<package format="2">
  <name>stingray_tfsm</name>
  <version>0.0.1</version>
  <description>PyTransitions FSM drive</description>

  <maintainer email="davtart2000@yandex.ru">Davtyan Artyom</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stingray_communication_msgs</depend>
  <depend>stingray_object_detection_msgs</depend>



</package>
